--- a/Water_Features/l10n/ko-KR.json
+++ b/Water_Features/l10n/ko-KR.json
@@ -56,6 +56,8 @@
   "Options.WARNING[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ResetWavesAndTidesSettingsButton]": "파도 및 조수 설정을 초기화 하겠습니까?",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Diurnal]": "일주조(하루 한번)",
   "Options.Water_Features.Water_Features.WaterFeaturesMod.TIDECLASSIFICATIONYYTAW[Semidiurnal]": "반일주조(하루 두번)",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCausesDamage]": "물로 인한 침수 및 피해",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterCausesDamage]": "기본 물 피해 및 침수 시스템을 활성화하거나 비활성화합니다. 이 설정은 저장된 게임마다 개별적으로 저장됩니다. 비활성화하면 아직 파괴되지 않은 침수된 건물에서 모든 침수 및 피해가 제거됩니다.",
   "YY_WATER_FEATURES.Flow": "유량",
   "YY_WATER_FEATURES.Depth": "깊이",
   "YY_WATER_FEATURES.MaxDepth": "최대 깊이",
@@ -89,8 +91,8 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "강수량과 눈이 녹으면 상승하고 날씨가 건조하면 천천히 배수되는 맞춤형 커스텀 수원입니다. 최대 수면 높이는 있지만 최소 수면 높이는 없습니다. 최대 수면 높이를 지정하려면 원하는 고도 지표면을 우클릭하세요. 재생 가능한 영역 내에 배치하려면 좌클릭하세요. 마우스를 올려 놓고 우클릭하면 제거됩니다.",
   "Assets.NAME[WaterSource RetentionBasin]": "저수지",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "강수량과 눈이 녹으면 상승하고 날씨가 건조하면 천천히 배수되는 맞춤형 커스텀 수원입니다. 이 수원은 최대 수면 높이와 최소 수면 높이를 가지고 있습니다. 최대 수면 높이를 지정하려면 원하는 고도 지표면을 우클릭하세요. 재생 가능한 영역 내에 배치하려면 좌클릭하세요. 마우스를 올려 놓고 우클릭하면 제거됩니다.",
-  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
-  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
+  "Assets.NAME[WaterSource Automated]": "수원지 자동화",
+  "Assets.DESCRIPTION[WaterSource Automated]": "사용자 지정 모드 수원지는 원하는 수면 고도에 자동으로 채워지고 안정화되도록 수원지 종류를 동적으로 변경합니다. 계절성 하천 또는 파도 및 조수 설정의 영향을 받지 않습니다. (오른쪽 클릭: 최대 고도를 지정합니다. 왼쪽 클릭: 플레이 가능한 영역 내에 배치합니다. 마우스를 올리고 오른쪽 클릭: 제거합니다.)",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "강은 지도 경계 근처에 배치되어야 합니다.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "반경이 너무 작아서 자동으로 증가되었습니다.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "수원을 제거하려면 우클릭 하십시오.",
@@ -112,11 +114,11 @@
   "YY_WATER_FEATURES.RadiusChange": "반경 변경",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "버전",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "설치된 Water Features 모드의 버전 번호입니다.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "계절 하천 설정은 게임 내 또는 편집기에서 사용할 수 있습니다.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "파도 및 조수 설정은 게임 내 또는 편집기에서 사용할 수 있습니다.",
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "물 시뮬레이션 속도 강제적용",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "게임 중에 물 시뮬레이션 속도가 최소 1배속 이상이 되도록 강제 적용을 시도합니다.",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "편집기",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "각각의 세이브 파일",
+  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "일반"
 }
