--- a/Water_Features/l10n/ru-RU.json
+++ b/Water_Features/l10n/ru-RU.json
@@ -1,12 +1,10 @@
 {
   "Options.SECTION[Water_Features.Water_Features.WaterFeaturesMod]": "Water Features",
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Сезонные потоки",
-  "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Water Tool",
   "Options.TAB[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Волны и приливы",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Stable]": "Стабильные функции",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Experimental]": "Экспериментальные функции",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Seasonal Streams]": "Сезонные потоки",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Water Tool]": "Water Tool",
   "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Waves and Tides]": "Волны и приливы",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Добавить собирающие водохранилища (требуется перезапуск)",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.IncludeRetentionBasins]": "Настраиваемый источник воды, уровень которого повышается с выпадением осадков и таянием снега и который медленно истощается в сухую погоду. Он имеет максимальную и минимальную высоту поверхности воды. Возможно, Вам потребуется настроить общую скорость испарения в настройках для обеспечения желаемого уровня инфильтрации воды в пруду.",
@@ -75,22 +73,15 @@
   "YY_WATER_FEATURES_DESCRIPTION.amount-rate-of-change": "Изменяет скорость, с которой кнопки увеличения и уменьшения влияют на Скорость потока, Глубину и Высоту.",
   "YY_WATER_FEATURES_DESCRIPTION.radius-rate-of-change": "Изменяет скорость, с которой кнопки увеличения и уменьшения влияют на радиус.",
   "YY_WATER_FEATURES_DESCRIPTION.min-depth-rate-of-change": "Изменяет скорость, с которой кнопки увеличения и уменьшения влияют на минимальную глубину.",
-  "SubServices.NAME[WaterTool]": "Water Tool",
   "Assets.SUB_SERVICE_DESCRIPTION[WaterTool]": "Water Tool позволяет вам добавлять и удалять источники воды с вашей карты.",
   "Assets.NAME[WaterSource Stream]": "Поток - Источник воды с постоянной или переменной скоростью",
   "Assets.DESCRIPTION[WaterSource Stream]": "Пропускает воду в зависимости от параметров этого мода. С отключенными Сезонными потоками, скорость потока будет стабильной, однако со включенными - сила потока будет меняться с сезонами, осадками и таянием снега. Нажмите ЛКМ, чтобы разместить в играбельную область. Наведите курсором и нажмите ПКМ, чтобы удалить.",
   "Assets.NAME[WaterSource River]": "Река - Источник реки на границе карты",
   "Assets.DESCRIPTION[WaterSource River]": "Имеет постоянный уровень и контролирует перемещение воды в и за пределы границы. В близи границы источник будет привязываться к границе. Нажмите ПКМ, чтобы указать высоту. Нажмите ЛКМ, чтобы разместить. Наведите курсором мыши и нажмите ПКМ, чтобы удалить.",
   "Assets.NAME[WaterSource Sea]": "Море - Источник морской воды на границе карты",
-  "Assets.DESCRIPTION[WaterSource Sea]": "Controls water flowing into or out of the border and the lowest sea controls sea level. With Waves and Tides disabled, it will maintain constant level. With Waves and Tides enabled the sea level rises and falls below the original sea level. Right click to designate the elevation. Left click to place if the radius touches a border. Hover over and right click to remove.",
   "Assets.NAME[WaterSource Lake]": "Озеро - Источник воды постоянной высоты",
-  "Assets.DESCRIPTION[WaterSource Lake]": "Fills quickly until it gets to the desired level and then maintains that level. If it has a target elevation below the ground level, it can drain water faster than evaporation. Right click to designate the target elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Assets.NAME[WaterSource DetentionBasin]": "Удерживающее водохранилище",
-  "Assets.DESCRIPTION[WaterSource DetentionBasin]": "Custom modded water source that rises with precipitation and snowmelt and slowly drains when the weather is dry. They have a maximum water surface elevation but no minimum water surface elevation. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Assets.NAME[WaterSource RetentionBasin]": "Собирающее водохранилище",
-  "Assets.DESCRIPTION[WaterSource RetentionBasin]": "Custom modded water source that rises with precipitation and snowmelt and slowly drains when the weather is dry. They have a maximum water surface elevation and a minimum water surface elevation. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
-  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
-  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "Реки должны быть размещены рядом с границей карты.",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "Радиус слишком маленький и был автоматически увеличен.",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "Нажмите правой кнопкой мыши, чтобы удалить источник воды.",
@@ -98,11 +89,8 @@
   "Tooltip.LABEL[YY.WT.MustTouchBorder]": "Морские источники воды должны касаться границы карты.",
   "Tooltip.LABEL[YY.WT.LockElevation]": "Щелкните правой кнопкой мыши, чтобы указать высоту поверхности воды.",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Fluidness]": "Текучесть",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Fluidness]": "Alter the Fluidness factor of the water system. It should change the flow characteristics. This can create small waves, cause flooding, or cause instabilities and spikes in the water system.",
-  "Editor.TOOL[Yenyang's Water Tool]": "Yenyang's Water Tool",
   "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Настройки Water Tool влияют на симуляцию в редакторе",
   "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WaterToolSettingsAffectEditorSimulation]": "Позволяет настройкам на вкладке Water Tool влиять на симуляцию в редакторе, включая испарение, текучесть и цикл очистки воды.",
-  "YY_WATER_FEATURES_DESCRIPTION.ElevationChange": "Water Tool will change target elevations of existing water sources by hovering over existing water source, left clicking, holding, dragging and releasing at new elevation. Usually dragging out raises, and dragging in lowers, but it's really just releasing at the desired elevation. Keep the cursor within playable area for reliability. Right click to cancel.",
   "YY_WATER_FEATURES_DESCRIPTION.PlaceWaterSource": "Water Tool размещает источники воды щелчком левой кнопки мыши и удаляет источники воды щелчком правой кнопки мыши.",
   "YY_WATER_FEATURES_DESCRIPTION.MoveWaterSource": "Water Tool переместит существующие источники воды. Целевые значения высоты существующих источников воды не изменятся. Щелкните правой кнопкой мыши для отмены.",
   "YY_WATER_FEATURES_DESCRIPTION.RadiusChange": "Water Tool изменит радиус источников воды. Правый щелчок мыши для отмены.",
@@ -110,13 +98,6 @@
   "YY_WATER_FEATURES.PlaceWaterSource": "Разместить источник воды",
   "YY_WATER_FEATURES.MoveWaterSource": "Переместить источник воды",
   "YY_WATER_FEATURES.RadiusChange": "Изменить радиус",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
+  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Версия",
+  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Версия установленного мода Water Features."
 }
