--- a/Water_Features/l10n/zh-HANT.json
+++ b/Water_Features/l10n/zh-HANT.json
@@ -89,8 +89,6 @@
   "Assets.DESCRIPTION[WaterSource DetentionBasin]": "自訂模組水源，隨降水和融雪上升，天氣乾燥時慢慢排水。它們有最大水面高度，但沒有最小水面高度。右鍵點擊指定最大海拔。左鍵點擊放置在可玩區域內。懸停並右鍵點擊以移除。",
   "Assets.NAME[WaterSource RetentionBasin]": "滯留盆地",
   "Assets.DESCRIPTION[WaterSource RetentionBasin]": "自訂模組水源，隨降水和融雪上升，天氣乾燥時慢慢排水。它們有最大水面高度和最小水面高度。右鍵點擊指定最大海拔。左鍵點擊放置在可玩區域內。懸停並右鍵點擊以移除。",
-  "Assets.NAME[WaterSource Automated]": "Automated Water Source",
-  "Assets.DESCRIPTION[WaterSource Automated]": "Custom modded water source that dynamically changes water source type to automatically fill and stabilize to the desired water surface elevation. Not affected by Seasonal Streams or Waves and Tides settings. Right click to designate the maximum elevation. Left click to place within playable area. Hover over and right click to remove.",
   "Tooltip.LABEL[YY.WT.PlaceNearBorder]": "河流必須放置在地圖邊界附近。",
   "Tooltip.LABEL[YY.WT.RadiusTooSmall]": "半徑太小，已自動增加。",
   "Tooltip.LABEL[YY.WT.RemoveWaterSource]": "滑鼠右鍵刪除水資源",
@@ -109,14 +107,5 @@
   "YY_WATER_FEATURES.ElevationChange": "海拔變化",
   "YY_WATER_FEATURES.PlaceWaterSource": "放置水源",
   "YY_WATER_FEATURES.MoveWaterSource": "移動水源",
-  "YY_WATER_FEATURES.RadiusChange": "改變半徑",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.Version]": "Version number for the Water Features mod installed.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.SeasonalStreamsSettingsAvailableInGame]": "Seasonal Streams settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.WavesAndTidesSettingsAvailableInGame]": "Waves and Tides settings available in the Game or Editor.",
-  "Options.OPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Force Water Simulation Speed",
-  "Options.OPTION_DESCRIPTION[Water_Features.Water_Features.WaterFeaturesMod.WaterFeaturesSettings.ForceWaterSimulationSpeed]": "Attempts to force a Water Simulation Speed of at least 1x while in Game.",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.Editor]": "Editor",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.SaveGame]": "Individual Save File",
-  "Options.GROUP[Water_Features.Water_Features.WaterFeaturesMod.General]": "General"
+  "YY_WATER_FEATURES.RadiusChange": "改變半徑"
 }
