--- a/Water_Features/UI/src/lang/en-US.json
+++ b/Water_Features/UI/src/lang/en-US.json
@@ -125,5 +125,7 @@
   "Assets.DESCRIPTION[WaterSource Generic]": "Fills quickly until it gets to the desired level and then maintains that level. If it has a target elevation below the ground level, it can drain water faster than evaporation. Behavior and color will change depending on whether it's placed inside the map boundary, at the map boundary, or outside the playable area. Right click to designate the target elevation. Left click to place anywhere. Hover over and right click to remove.",
   "Assets.NAME[WaterSource Seasonal]": "Seasonal Water Source",
   "Assets.DESCRIPTION[WaterSource Seasonal]": "Generic Water Source where the level varies according to Seasonal Streams settings, the map's seasonal properties, and current weather. Behavior and outer ring color will change depending on whether it's placed inside the map boundary, at the map boundary, or outside the playable area. Right click to designate the target elevation. Left click to place anywhere. Hover over and right click to remove.",
-  "Water_Features.TOOLTIP_DESCRIPTION[AmountIsElevation]": "Elevation Set. Toggle to reset to Depth."
+  "Water_Features.TOOLTIP_DESCRIPTION[AmountIsElevation]": "Elevation Set. Toggle to reset to Depth.",
+  "Assets.NAME[WaterSource VanillaLake]": "Constant Level Water Source",
+  "Assets.DESCRIPTION[WaterSource VanillaLake]": "Fills slowly until it gets to the desired level and then maintains that level. If it has a target elevation below the ground level, it can drain water faster than evaporation. Right click to designate the target elevation. Left click to place within playable area. Hover over and right click to remove."
 }
